--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="my-2 mx-4 d-flex">
                     <label class=" mx-auto w-50 " for="borderColor">Border Color </label>
                     <div class="w-50">
-                        <input type="color" class=""   value="#d32727" id="borderColor" onchange="changeBorderColor(this.value)" />
+                        <input type="color" class=""   value="#bebebe" id="borderColor" onchange="changeBorderColor(this.value)" />
                     </div>
                 </div>
                 <hr>
