--- a/index.html
+++ b/index.html
@@ -19,8 +19,33 @@
     </head>
 
     <body>
+
+        <!-- Modal -->
+        <div class="modal top fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+            <div class="modal-dialog   modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">CSS Code</h5>
+                        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class=" ">
+
+                        <code id="generatedCss" class=" mx-auto w-auto" style="text-align:left;font-size:0.7rem;">
+
+                        </code>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">
+                            Close
+                        </button>
+                        <!-- <button type="button" class="btn btn-primary" onclick="copyText()">Copy to Clipboard</button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Start your project here-->
-        <div class="container-fluid ">
+        <div class="container-fluid h-auto">
             <!-- <div class="my-2 mx-4 d-flex">
             <label class=" mx-auto w-50 " for="screenColor">Background Color </label>
             <div class="w-50">
@@ -29,10 +54,14 @@
         </div> -->
             <div class="py-1 px-4 text-center letter-spacing fs-4 text-white">Card Generator</div>
             <div class="sm:flex-column d-flex justify-content-between align-items-center text-center ">
-                <div class="d-flex justify-content-center align-items-center w-100" style="">
+                <div class="d-flex justify-content-center align-items-center w-50" style="">
                     <div class="text-center defaultCss d-flex justify-content-center align-items-center" id="create" style=""> </div>
                 </div>
-                <div class="px-2 mx-5 card  overflow-auto" id="toolCard" style="width:40%;height:38rem;">
+                <div class="px-2 mx-5 card  overflow-auto" id="toolCard" style="width:30%;height:88vh;">
+                    <div class="navbar navbar-expand-lg navbar-light bg-white flex sticky-top justify-content-center " style="z-index:99">
+                        <button class="btn text-primary text-bold  mx-2 " id="cssBtn" type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#exampleModal">Get CSS</button>
+                        <button class="btn text-danger mx-2 " id="clear" onclick="clearcontent()">Clear</button>
+                    </div>
                     <div class="card-body">
                         <div class="my-2 mx-4">
                             <label class="" for="height">Height</label>
@@ -103,31 +132,59 @@
                         </div>
                         <hr>
                         <div class="my-2 mx-4">
-                            <label class=" " for="border ">Border Width</label>
+                            <label class=" " for="border">Border Width</label>
                             <div class="range">
                                 <input type="range" class="form-range" id="border" min="0" max="20" step="1" value="4" />
                             </div>
                         </div>
                         <div class="my-2 mx-4">
+                            <label class=" " for="borderRadiusTopLeft">Border Top-Left Radius</label>
+                            <div class="range">
+                                <input type="range" class="form-range" id="borderRadiusTopLeft" min="0" max="100" step="1" value="0" />
+                            </div>
+                        </div>
+                        <div class="my-2 mx-4">
+                            <label class=" " for="borderRadiusTopRight">Border Top-Right Radius</label>
+                            <div class="range">
+                                <input type="range" class="form-range" id="borderRadiusTopRight" min="0" max="100" step="1" value="0" />
+                            </div>
+                        </div>
+                        <div class="my-2 mx-4">
+                            <label class=" " for="borderRadiusBottomLeft">Border Bottom-Left Radius</label>
+                            <div class="range">
+                                <input type="range" class="form-range" id="borderRadiusBottomLeft" min="0" max="100" step="1" value="0" />
+                            </div>
+                        </div>
+                        <div class="my-2 mx-4">
+                            <label class=" " for="borderRadiusBottomRight">Border Bottom-Right Radius</label>
+                            <div class="range">
+                                <input type="range" class="form-range" id="borderRadiusBottomRight" min="0" max="100" step="1" value="0" />
+                            </div>
+                        </div>
+                        <!-- <div class="my-2 mx-4">
                             <label class=" " for="radius ">Border Radius</label>
                             <div class="range">
                                 <input type="range" class="form-range" id="radius" min="0" max="50" step="1" value="30" />
                             </div>
-                        </div>
-                        <div class="my-2 mx-4 flex">
-                            <button class="btn text-primary " id="cssBtn">Generate CSS</button>
-                            <button class="btn text-danger " id="clear" onclick="clearcontent()">Clear</button>
-                        </div>
+                        </div> -->
+
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn my-2" id="animateBtn">
+                            Color Change
+                        </button>
+                        <button class="btn my-2" id="animateStopBtn" style="display:none;">
+                            Stop
+                        </button>
                     </div>
 
-                    <code id="generatedCss" class="w-auto" style="text-align:left;font-size:0.7rem;">
-
-                    </code>
                 </div>
+
+
             </div>
         </div>
         <footer>
-            <div class="text-left mx-4">
+            <div class="text-left mx-4" id="textColor">
                 <i class="fas fa-code"></i> with <i class="fas fa-heart"></i>
             </div>
 
