--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
         <link rel="stylesheet" href="css/mdb.min.css" />
         <link rel="stylesheet" href="css/style.css" />
     </head>
+    <style>
+        #creates {
+            width: 100px;
+            height: 100px;
+            background: red;
+            position: relative;
+            animation: mymove 1s infinite;
+        }
+
+        @keyframes mymove {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 
     <body>
 
@@ -160,6 +179,20 @@
                             <div class="range">
                                 <input type="range" class="form-range" id="borderRadiusBottomRight" min="0" max="100" step="1" value="0" />
                             </div>
+                        </div>
+                        <div class="my-2 mx-4">
+                            <label class=" " for="rotate">Rotate</label>
+                            <div class="range">
+                                <input type="range" class="form-range" id="rotate" min="0" max="360" step="1" value="0" />
+                            </div>
+                        </div>
+                        <hr>
+                        <div>Animation</div>
+                        <hr>
+                        <div class="my-2 mx-4 flex">
+                            <button type="button" name="button" class="btn" id="bounce">bounce</button>
+                            <button type="button" name="button" class="btn" id="spin">bounce</button>
+
                         </div>
                         <!-- <div class="my-2 mx-4">
                             <label class=" " for="radius ">Border Radius</label>
